[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemur"
dynamic = ["version", "readme", "optional-dependencies"]
description = "Certificate management and orchestration service"
authors = [
    { name = "The Lemur developers", email = "security@netflix.com" }
]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    #    "Programming Language :: Python :: 3.13",
    "Natural Language :: English"
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "acme==3.3.0",
    "alembic==1.13.1",
    "alembic-autogenerate-enums==0.1.2",
    "amqp==5.2.0",
    "aniso8601==9.0.1",
    "arrow==1.3.0",
    "async-timeout==4.0.3",
    "asyncpool==1.0",
    "attrs==23.2.0",
    "bcrypt==4.1.2",
    "billiard==4.2.0",
    "blinker==1.7.0",
    "boto3==1.40.30",
    "botocore==1.40.30",
    "cachetools==5.3.3",
    "celery==5.3.6",
    "certbot==3.3.0",
    "certifi==2025.8.3",
    "certsrv==2.1.1",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "cloudflare==2.20.0",
    "configargparse==1.7.1",
    "configobj==5.0.9",
    "cryptography==45.0.7",
    "deprecated==1.2.14",
    "distro==1.9.0",
    "dnspython==1.15.0",
    "dyn==1.8.6",
    "flask==2.3.3",
    "flask-bcrypt==1.0.1",
    "flask-cors==6.0.1",
    "flask-limiter==3.11.0",
    "flask-mail==0.10.0",
    "flask-migrate==4.0.7",
    "flask-principal==0.4.0",
    "flask-replicated==2.1",
    "flask-restful==0.3.10",
    "flask-sqlalchemy==2.5.1",
    "google-api-core==2.18.0",
    "google-auth==2.29.0",
    "google-cloud-private-ca==1.15.0",
    "googleapis-common-protos==1.63.0",
    "grpc-google-iam-v1==0.14.0",
    "grpcio==1.62.1",
    "grpcio-status==1.62.1",
    "gunicorn==23.0.0",
    "hvac==2.3.0",
    "idna==3.7",
    "importlib-resources==6.4.0",
    "inflection==0.5.1",
    "invoke==2.2.0",
    "itsdangerous==2.2.0",
    "javaobj-py3==0.4.4",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "josepy==1.15.0",
    "jsonlines==4.0.0",
    "kombu==5.3.6",
    "limits==3.13.0",
    "lockfile==0.12.2",
    "mako==1.3.2",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "marshmallow==2.21.0",
    "marshmallow-sqlalchemy==0.23.1",
    "mdurl==0.1.2",
    "ndg-httpsclient==0.5.1",
    "ordered-set==4.1.0",
    "packaging==24.0",
    "paramiko==4.0.0",
    "parsedatetime==2.6",
    "pem==23.1.0",
    "prompt-toolkit==3.0.43",
    "proto-plus==1.23.0",
    "protobuf==4.25.8",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pycparser==2.22",
    "pycryptodomex==3.20.0",
    "pygments==2.17.2",
    "pyjks==20.0.0",
    "pyjwt==2.9.0",
    "pynacl==1.5.0",
    "pyopenssl==25.2.0",
    "pyrfc3339==1.1",
    "pyspnego==0.10.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-json-logger==3.3.0",
    "python-ldap==3.4.5",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "redis==5.3.1",
    "requests==2.32.5",
    "requests-ntlm==1.2.0",
    "retrying==1.4.2",
    "rich==13.7.1",
    "rsa==4.9",
    "s3transfer==0.14.0",
    "sentry-sdk==2.35.1",
    "six==1.17.0",
    "sqlalchemy==1.3.24",
    "sqlalchemy-utils==0.41.2",
    "tabulate==0.9.0",
    "twofish==0.3.0",
    "types-protobuf==6.30.2.20250914",
    "types-python-dateutil==2.9.0.20240316",
    "typing-extensions==4.11.0",
    "tzdata==2024.1",
    "urllib3==1.26.18",
    "validators==0.35.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.4",
    "wrapt==1.16.0",
    "xmltodict==1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.0",
    "invoke==2.2.0",
    "twine==6.2.0",
    "nodeenv==1.9.1",
    "ruff>=0.14.8",
    "mypy==1.19.0",
    "mypy-extensions==1.1.0"
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-httpdomain>=1.8.1",
]
tests = [
    "bandit==1.8.6",
    "coverage==7.10.6",
    "factory-boy==3.3.3",
    "faker==37.6.0",
    "fakeredis==2.31.1",
    "freezegun==1.5.5",
    "moto[all]==4.2.14",
    "nose==1.3.7",
    "openapi-spec-validator==0.7.2",
    "pytest==8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-flask==1.3.0",
    "pytest-mock==3.15.0",
    "requests-mock==1.12.1",
    "types-deprecated==1.2.15.20250304",
    "types-paramiko==4.0.0.20250822",
    "types-pyopenssl==24.1.0.20240722",
    "types-pyrfc3339==2.0.1.20250825",
    "types-pytz==2025.2.0.20250809",
    "types-redis==4.6.0.20241004",
    "types-requests==2.31.0.6",
    "types-setuptools==80.9.0.20250822",
    "types-six==1.17.0.20250515",
    "types-tabulate==0.9.0.20241207",
]

[project.urls]
homepage = "https://github.com/Netflix/lemur"
repository = "https://github.com/Netflix/lemur"

[project.scripts]
lemur = "lemur.manage:main"

[project.entry-points."lemur.plugins"]
verisign_issuer = "lemur.plugins.lemur_verisign.plugin:VerisignIssuerPlugin"
acme_issuer = "lemur.plugins.lemur_acme.plugin:ACMEIssuerPlugin"
acme_http_issuer = "lemur.plugins.lemur_acme.plugin:ACMEHttpIssuerPlugin"
aws_destination = "lemur.plugins.lemur_aws.plugin:AWSDestinationPlugin"
aws_acm_destination = "lemur.plugins.lemur_aws.plugin:ACMDestinationPlugin"
aws_source = "lemur.plugins.lemur_aws.plugin:AWSSourcePlugin"
aws_acm_source = "lemur.plugins.lemur_aws.plugin:AWSACMSourcePlugin"
aws_s3 = "lemur.plugins.lemur_aws.plugin:S3DestinationPlugin"
aws_sns = "lemur.plugins.lemur_aws.plugin:SNSNotificationPlugin"
email_notification = "lemur.plugins.lemur_email.plugin:EmailNotificationPlugin"
slack_notification = "lemur.plugins.lemur_slack.plugin:SlackNotificationPlugin"
java_truststore_export = "lemur.plugins.lemur_jks.plugin:JavaTruststoreExportPlugin"
java_keystore_export = "lemur.plugins.lemur_jks.plugin:JavaKeystoreExportPlugin"
openssl_export = "lemur.plugins.lemur_openssl.plugin:OpenSSLExportPlugin"
atlas_metric = "lemur.plugins.lemur_atlas.plugin:AtlasMetricPlugin"
atlas_metric_redis = "lemur.plugins.lemur_atlas_redis.plugin:AtlasMetricRedisPlugin"
kubernetes_destination = "lemur.plugins.lemur_kubernetes.plugin:KubernetesDestinationPlugin"
cryptography_issuer = "lemur.plugins.lemur_cryptography.plugin:CryptographyIssuerPlugin"
cfssl_issuer = "lemur.plugins.lemur_cfssl.plugin:CfsslIssuerPlugin"
digicert_issuer = "lemur.plugins.lemur_digicert.plugin:DigiCertIssuerPlugin"
digicert_source = "lemur.plugins.lemur_digicert.plugin:DigiCertSourcePlugin"
digicert_cis_issuer = "lemur.plugins.lemur_digicert.plugin:DigiCertCISIssuerPlugin"
digicert_cis_source = "lemur.plugins.lemur_digicert.plugin:DigiCertCISSourcePlugin"
csr_export = "lemur.plugins.lemur_csr.plugin:CSRExportPlugin"
sftp_destination = "lemur.plugins.lemur_sftp.plugin:SFTPDestinationPlugin"
vault_source = "lemur.plugins.lemur_vault_dest.plugin:VaultSourcePlugin"
vault_desination = "lemur.plugins.lemur_vault_dest.plugin:VaultDestinationPlugin"
adcs_issuer = "lemur.plugins.lemur_adcs.plugin:ADCSIssuerPlugin"
adcs_source = "lemur.plugins.lemur_adcs.plugin:ADCSSourcePlugin"
entrust_issuer = "lemur.plugins.lemur_entrust.plugin:EntrustIssuerPlugin"
entrust_source = "lemur.plugins.lemur_entrust.plugin:EntrustSourcePlugin"
azure_destination = "lemur.plugins.lemur_azure_dest.plugin:AzureDestinationPlugin"
google_ca_issuer = "lemur.plugins.lemur_google_ca.plugin:GoogleCaIssuerPlugin"

[tool.ruff]
line-length = 100
exclude = [".tox", ".git", "*/migrations/*", "lemur/static/*", "docs/*"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402", "E731", "F841", "F405"]

[tool.mypy]
files = ["lemur"]
ignore_missing_imports = true

[tool.pytest]
python_files = "test*.py"
addopts = "--tb=native -p no:doctest"
norecursedirs = "bin dist docs htmlcov script hooks node_modules .* {args}"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["lemur*"]

[tool.setuptools.dynamic]
version = { attr = "lemur.__about__.__version__" }
readme = { file = "README.rst" }

[tool.wheel]
universal = true
